--- a/Dashboard42.xcodeproj/xcshareddata/xcschemes/Dashboard42.xcscheme
+++ b/Dashboard42.xcodeproj/xcshareddata/xcschemes/Dashboard42.xcscheme
@@ -27,8 +27,36 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      shouldUseLaunchSchemeArgsEnv = "YES"
-      shouldAutocreateTestPlan = "YES">
+      shouldUseLaunchSchemeArgsEnv = "YES">
+      <TestPlans>
+         <TestPlanReference
+            reference = "container:Dashboard42.xctestplan"
+            default = "YES">
+         </TestPlanReference>
+      </TestPlans>
+      <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "01454F122C52A2E300AC5B12"
+               BuildableName = "Dashboard42Tests.xctest"
+               BlueprintName = "Dashboard42Tests"
+               ReferencedContainer = "container:Dashboard42.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
+         <TestableReference
+            skipped = "NO"
+            parallelizable = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "01454F1F2C52A36200AC5B12"
+               BuildableName = "Dashboard42UITests.xctest"
+               BlueprintName = "Dashboard42UITests"
+               ReferencedContainer = "container:Dashboard42.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
+      </Testables>
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
