refactor: ignore api config files

--- a/Dashboard42.xcodeproj/xcshareddata/xcschemes/Dashboard42.xcscheme
+++ b/Dashboard42.xcodeproj/xcshareddata/xcschemes/Dashboard42.xcscheme
@@ -46,8 +46,7 @@
             </BuildableReference>
          </TestableReference>
          <TestableReference
-            skipped = "NO"
-            parallelizable = "YES">
+            skipped = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "01454F1F2C52A36200AC5B12"
